--- a/02-Data-processing.Rmd
+++ b/02-Data-processing.Rmd
@@ -1,7 +1,32 @@
 # Data processing
 
 In this section I'll process the raw data so that I can use them for analysis in the next section.
-Currently, I'm not allowed to share the raw data, which is why they're not on the Github repo yet.
+Note that the data were slightly preprocessed: I only selected variables that we use for processing and analysis here.
+Other than that, the data were untouched.
+
+The data are on the OSF.
+You can download them if you set the code chunk below to `eval=TRUE`.
+Downloading only works when the OSF project is public.
+If it isn't during peer review, you'll need to paste the data files from the OSF to the `data/` folder manually.
+```{r download-data, eval=FALSE}
+# create directory
+dir.create("data/", FALSE, TRUE)
+
+# download models
+osf_retrieve_node("https://osf.io/yn7sx/") %>% 
+  osf_ls_nodes() %>% 
+  filter(name == "data") %>% 
+  osf_ls_files(
+    .,
+    n_max = Inf
+  ) %>% 
+  osf_download(
+    .,
+    path = here("data"),
+    progress = TRUE
+  )
+```
+
 
 ## Read waves 2-6
 
@@ -2142,9 +2167,6 @@ at_least_three <-
 working_file <- 
   working_file %>% 
   filter(id %in% at_least_three)
-
-# save working file
-saveRDS(working_file, here("data", "processed_data.rds"))
 
 # remove from workspace
 rm(at_least_three)
